--- a/vsftpd.conf
+++ b/vsftpd.conf
@@ -28,7 +28,7 @@ anonymous_enable=NO
 local_enable=YES
 #
 # Uncomment this to enable any form of FTP write command.
-#write_enable=YES
+write_enable=YES
 #
 # Default umask for local users is 077. You may wish to change this to 022,
 # if your users expect that (022 is used by most other ftpd's)
@@ -157,11 +157,7 @@ ssl_sslv2=NO
 ssl_sslv3=NO
 require_ssl_reuse=NO
 ssl_ciphers=HIGH
-local_root=/home/tu_usuario/ftp
-
-
-
-
+local_root=/home/david/ftp
 
 #
 # Uncomment this to indicate that vsftpd use a utf8 filesystem.
